# tri-ad-challenge

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  docker-build-image.sh  docker-run.sh  prj_build.sh  prj_build_clean.sh  prj_build_install.sh  prj_install.sh  runtests.sh
dev/: CMakeLists.txt
dev/apps/: CMakeLists.txt
dev/apps/tri-ad-challenge/: CMakeLists.txt
dev/apps/tri-ad-challenge/include/tri-ad-challenge/: object_frequency  user_input  word_appender_worker.h  word_input_reader  word_input_worker  word_lookup_worker  word_lookuper
dev/apps/tri-ad-challenge/src/: main.cpp  word_appender_worker.cpp
dev/libs/synchronization/include/synchronization/: msg_queue.h  object_frequency.h
dev/tests/: CMakeLists.txt
dev/tests/synchronization/: CMakeLists.txt
dev/tests/synchronization/src/: message_queue_test.cpp  object_frequency_test.cpp
dev/tests/tri-ad-challenge/: CMakeLists.txt
dev/tests/tri-ad-challenge/src/: object_frequency_test.cpp  tri-ad-challenge_test.cpp  word_appender_worker_test.cpp  word_input_reader_test.cpp  word_input_worker_test.cpp  word_lookup_worker_test.cpp  word_lookuper_test.cpp
dockerfiles/: Dockerfile
